# quasi

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/multi-signal-pitot-pressure/: pressure_data.csv  runscript.py
examples/square_wave/: runscript.py  square_wave_generator.py
examples/synthetic_pitot_pressure/: __init__.py  effect_of_noise.py  pitot_pressure_curve_generator.py  runscript.py
src/: plotting.py  sliding_window.py  t_test.py
src/quasi/core/: sliding_window.py
src/quasi/plotting/: colorline.py  plotting.py
src/quasi/stats/: adf.py  t_test.py
src/steady_state_toolkit/: __init__.py  plotting.py  sliding_window.py  t_test.py
src/steady_state_toolkit/core/: __init__.py  sliding_window.py
src/steady_state_toolkit/methods/: __init__.py  adf.py  t_test.py
src/steady_state_toolkit/plotmethods/: plotting.py
src/steady_state_toolkit/plotting/: __init__.py  colorline.py  plotting.py
src/steady_state_toolkit/statmethods/: __init__.py  adf.py  kpss.py
src/steady_state_toolkit/stats/: kpss.py  t_test.py
