
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steady_state_toolkit"
version = "0.0.1"
authors = [
  { name="Matt Uren", email="m.uren94@proton.me" },
]
description = "A package to identify steady state behaviour in hypersonic shock tunnel data "
readme = "README.md"
requires-python = ">=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.10.8"
]


license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/muren-94/steady_state_toolkit"
Issues = "https://github.com/muren-94/steady_state_toolkit/issues"